New updates are grouped by person (committer/merger), at the top of the file.
All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.


2017-03-01 niel
	Fix: Alter the logic for checking the Config files location during install step 1.
2017-02-24 niel
	Chg: Move location of configuration files (config.php, settings.php, etc.) to .../configuration
		***NOTE*** See v0.7.0.0 entry at https://github.com/nZEDb/nZEDb/wiki/Update-Guide for
		additional instructions.
2017-02-21 DariusIII
	Chg: Move search and user menu to headermenu.tpl in Charisma theme
	Chg: Update Charisma theme to use new bootswatch library, remove unneeded css and make it use the bootswatch slate theme (make it darker)
2017-02-21 niel
	Add: Update nZEDbBase.php file to be able to return any of the 'constant' values.
	Mrg: PR 2397, from ThePeeps - Fix for uspsetting.sh (powerline segment).
2017-02-17 niel
	Mrg: PR 2391 and 2392, from Wally73 - Updates simple.sh and simple-extended.sh scripts
	Fix: Change checks in NZB to look for false from Db lookup, instead of Traversable which
		doesn't guarantee useful data.
2017-02-15 niel
	Mrg: PR 2388, from kaibosh - Default movie process quantity to 100 if not specified, else use
	    setting.
2017-02-13 niel
	Mrg: dev-log-bad-regex branch. This adds logging of failed (as in errors, not zero results)
		regexes to the nZEDb log. **NOTE** This surpresses warning messages in the PHP log.
2017-02-12 b3rs3rk
	Chg: Improve performance by doing poster check in PHP instead of single row MySQL queries
2017-02-10 b3rs3rk
	Fix: Settings issues with AniDB population preventing run.
2017-02-10 DariusIII
	Fix: Search by reqid link in predb.tpl (fixes issue #2381)
2017-02-09 niel
	Mrg: dev-base-template-mod branch. See commit 2017-01-18.
	Mrg: PR 2379, from kaibosh - Update sequential scripts for mandatory TPG use.